--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     padding-bottom: 3rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
@@ -20,7 +19,7 @@ body {
     border: none;
     padding: 0 1rem;
     flex-grow: 1;
-    border-radius: 2rem;
+    border-radius: 5px;
     margin: 0.25rem;
 }
 
@@ -44,26 +43,24 @@ body {
 
 #messages>table {
     padding: 0.5rem 1rem;
-}
-
-#messages>table:nth-child(even) {
-    background-color: #1C1C1C;
+    margin: 6px;
 }
 
 table {
     width: 100%;
-    border: none !important;
+    border: solid 3px #1C1C1C;
+    border-radius: 5px;
 }
 
 .username {
     border: none !important;
-    border-right: solid 1px #444444 !important;
     float: top;
     width: 200px;
+    background-color: #1C1C1C;
 }
 
 .message {
     border: none !important;
-    border-left: solid 1px #444444 !important;
     padding-left: 10px;
+    background-color: #262626;
 }
