--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Socket.IO chat</title>
+    <title>Selups</title>
     <link rel="stylesheet" href="/style/apprentice.css">
     <link rel="stylesheet" href="/style/style.css">
 </head>
