Better login system + view links as a real link

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,8 +20,8 @@
             </tr>
         </tbody>
     </table>
-    <form id="form" action="">
-        <input id="input" autocomplete="off" /><button>Enter</button>
+    <form id="form" method="post">
+        <input id="input" autocomplete="off" name="username"/><button>Enter</button>
     </form>
 </body>
 
