Added mongoose, so, selups V1 is ready!
Backend node.js code is changed, optimized for mongoose.
Added date info for messsages.

And front end code is optimized via this changes.

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -52,7 +52,7 @@ table {
     border-radius: 5px;
 }
 
-.username {
+.info {
     border: none !important;
     vertical-align: text-top;
     width: 200px;
