--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Giriş Yap - Selups</title>
+    <title>Kaydol - Selups</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css">
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-md sticky-top py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Selups</span></a><a class="btn btn-primary shadow" role="button" href="signup">Kaydol</a></div>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Selups</span></a><a class="btn btn-primary shadow" role="button" href="/">Giriş Yap</a></div>
     </nav>
     <header class="bg-dark"></header>
     <section></section>
@@ -21,8 +21,8 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <p class="fw-bold text-success mb-2">Giriş Yap</p>
-                    <h2 class="fw-bold">Selups'a giriş yap!</h2>
+                    <p class="fw-bold text-success mb-2">Kaydol</p>
+                    <h2 class="fw-bold">Selups ağına katıl!</h2>
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
@@ -31,7 +31,7 @@
                         <form class="p-3 p-xl-4" method="post">
                             <div class="mb-3"><input class="form-control" type="text" name="username" placeholder="Kullanıcı adı"></div>
                             <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Şifre"></div>
-                            <div><button class="btn btn-primary shadow d-block w-100" type="submit">Giriş Yap</button></div>
+                            <div><button class="btn btn-primary shadow d-block w-100" type="submit">Kaydol</button></div>
                         </form>
                     </div>
                 </div>
