--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,52 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Sohbet - Selups</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-</head>
+<%- include("extra/head", {title: "Sohbet - Selups"}) %>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-md sticky-top py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Selups</span></a><a class="btn btn-primary shadow" role="button" href="logout">Çıkış Yap</a></div>
-    </nav>
-    <header class="bg-dark"></header>
-    <section>
-        <div><ul class="list-unstyled mb-5" id="msgbody">
-<% var lastuser = null; %>
-<% for(const message of messages) { %>
-<% if(message.id != lastuser) { %>
-<% if(lastuser != null) { %>
-</div>
-</div>
-</li>
-<% } %>
-<li class="mx-0">
-<div class="card">
-<div class="card-body px-0">
-<h6 class="text-muted card-subtitle mb-2 px-2"><%=  message.id %> <span class="visible-hover">- <%= new Date(message.date).toLocaleString("tr") %></span></h6>
-<% } %>
-<p class="card-text dark-hover my-0 py-1 px-4"><%=  message.msg %></p>
-<% lastuser = message.id; %>
-<% } %>
-<% if(messages.length > 0) { %>
-</div>
-</div>
-</li>
-<% } %>
-</ul></div>
-    </section><form class="input-group mb-2 px-1 fixed-bottom" id="form" data-username="<%= username %>">
-<input id="input" type="text" class="form-control" placeholder="Bir mesaj gir..." style="border-top-left-radius: 2rem;border-bottom-left-radius: 2rem;background: var(--bs-dark);border-right: none;border-color: rgb(0, 0, 0, 0.4);color: var(--bs-white)" autocomplete="off">   
-<button class="btn btn-primary" type="submit" style="border-left: none;border-color: rgb(0, 0, 0, 0.4)">Gönder</button></form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="assets/js/bold-and-dark.js"></script>
-    <script src="assets/js/script.js"></script>
+  <nav class="navbar navbar-dark navbar-expand-md sticky-top py-3" id="mainNav">
+    <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Selups</span></a><a class="btn btn-primary shadow" role="button" href="logout">Çıkış Yap</a></div>
+  </nav>
+  <header class="bg-dark"></header>
+  <section>
+    <div>
+      <ul class="list-unstyled mb-5" id="msgbody">
+      </ul>
+    </div>
+  </section>
+  <form class="input-group mb-2 px-1 fixed-bottom" id="form" data-username="<%= user.username %>">
+    <input id="input" type="text" class="form-control" placeholder="Bir mesaj gir..." style="border-top-left-radius: 2rem;border-bottom-left-radius: 2rem;background: var(--bs-dark);border-right: none;border-color: rgb(0, 0, 0, 0.4);color: var(--bs-white)" autocomplete="off">
+    <button class="btn btn-primary" type="submit" style="border-left: none;border-color: rgb(0, 0, 0, 0.4)">Gönder</button>
+  </form>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/assets/js/bold-and-dark.js"></script>
+  <script>
+    const SYSTEM = "<%= SYSTEM %>";
+  </script>
+  <script src="/assets/js/selups.js" type="module"></script>
 </body>
 
 </html>
