--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="tr">
 
-<%- include("extra/head", {title: "Giriş Yap - Selups"}) %>
-
+<%- include("extra/head", {title: "Kayıt Ol - Selups"}) %>
 
 <body>
   <nav class="navbar navbar-dark navbar-expand-md sticky-top py-3" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="/"><span>Selups</span></a>
-      <a class="btn btn-primary shadow" role="button" href="/register">Kaydol</a>
-    </div>
+    <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>Selups</span></a><a class="btn btn-primary shadow" role="button" href="/">Giriş Yap</a></div>
   </nav>
   <header class="bg-dark"></header>
   <section></section>
@@ -17,28 +13,29 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-8 col-xl-6 text-center mx-auto">
-          <p class="fw-bold text-success mb-2">Giriş Yap</p>
-          <h2 class="fw-bold">Selups'a giriş yap!</h2>
+          <p class="fw-bold text-success mb-2">Kaydol</p>
+          <h2 class="fw-bold">Selups ağına katıl!</h2>
         </div>
-      </div>
-      <% if (error) { %>
+
+        <% if (error) { %>
         <div class="col-md-8 col-xl-6 text-center mx-auto">
           <p class="fw-bold text-danger mb-2"><%= error %></p>
         </div>
         <% } %>
+      </div>
       <div class="row d-flex justify-content-center">
         <div class="col-md-6 col-xl-4">
           <div>
             <form class="p-3 p-xl-4" method="post">
               <div class="mb-3"><input class="form-control" type="text" name="username" placeholder="Kullanıcı adı"></div>
               <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Şifre"></div>
-              <div><button class="btn btn-primary shadow d-block w-100" type="submit">Giriş Yap</button></div>
+              <div><button class="btn btn-primary shadow d-block w-100" type="submit">Kaydol</button></div>
             </form>
           </div>
         </div>
       </div>
     </div>
-  </section>    
+  </section>  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/js/bold-and-dark.js"></script>
 </body>
